--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   cloud_firestore: ^0.13.5
   firebase_auth: ^0.16.0
   shared_preferences: ^0.5.7
+  sqflite: ^1.2.0
+  path_provider: ^1.6.0
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
