Implemented Login & Saving Student Profile : 6

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   sqflite: ^1.2.0
   path_provider: ^1.6.0
   intl: ^0.16.1
+  flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
   flutter_test:
