--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path_provider: ^1.6.0
   intl: ^0.16.1
   flutter_spinkit: ^4.1.2+1
+  photo_view: ^0.9.2
 
 dev_dependencies:
   flutter_test:
