--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,10 @@ dependencies:
   path_provider: ^1.6.0
   intl: ^0.16.1
   flutter_spinkit: ^4.1.2+1
-  photo_view: ^0.9.2
+  local_auth: ^0.6.2+2
+  get_it: ^1.0.3+2
+  geolocator: ^5.3.1
+  location_permissions: ^2.0.5
 
 dev_dependencies:
   flutter_test:
